--- a/templates/index.html
+++ b/templates/index.html
@@ -82,9 +82,13 @@
             <h2>Recommended Movies:</h2>
             <ul>
                 {% for rec in recommendations %}
-                    <li>{{ rec }}</li>
+                    <li>
+                        🎬 <strong>{{ rec.title }}</strong> <br>
+                        🎭 <em>{{ rec.genres }}</em>
+                    </li>
                 {% endfor %}
             </ul>
+            
         {% else %}
             <p class="no-recommendations">⚠️ No recommendations found. Try another title.</p>
         {% endif %}
